Adjustment of the spacing-xl value. Correction of the top position defined in % for the history-section class. Miscellaneous additional adjustments.

--- a/css/history.css
+++ b/css/history.css
@@ -1,6 +1,6 @@
 .history-section{
     margin: 0;
-    padding: 5px;
+    padding: 8px;
     width: 200px;
     background-color: #f1f1f1;
     position: absolute;
@@ -9,7 +9,7 @@
     overflow-x: hidden;
     transition: 0.5s;
     z-index: 100;
-    top:13%;
+    top:98px;
     border-radius: 0 9px 9px 0;
     left: 50px;
 }
